# scrt-escrow

./: Anchor.toml  package-lock.json  package.json  test-seq.txt
frontend/: config.js  package.json  webpack.config.js
frontend/src/: config.json  index.html  index.js  lib.js
frontend/src/idl/: scrt_escrow.json
lib/: utils.js
programs/scrt-escrow/: Cargo.toml
programs/scrt-escrow/src/: account.rs  error.rs  lib.rs  verifier.rs
tests/: lib.js  scrt_escrow.ts  sign.js
tests/escrow/: log.test.js  snip.test  test.test.js  test_apis.test.js  test_apis1.test.js
