[package]
name = "scrt_escrow"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "scrt_escrow"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.17.0"
anchor-spl = "0.17.0"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}

getrandom = { version = "0.2.2", features = ["custom"] }
p256 = "0.11.1"

#getrandom = { version = "0.1.1", features = ["dummy"] }
#ed25519_dalek = "1.0.1"